--- a/.github/workfllows/main.yml
+++ b/.github/workfllows/main.yml
@@ -1,36 +1,25 @@
-name: Deploy to ECR
+name: Docker Build and Push
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main  # Defina a branch na qual deseja acionar a ação
 
 jobs:
-  
-  build:
-    
-    name: Build Image
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-
-    - name: Check out code
+    - name: Checkout Code
       uses: actions/checkout@v2
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
 
-    - name: Login to Amazon ECR
+    - name: Login to AWS ECR
       id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: my-public-repo
-        IMAGE_TAG: dev
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/t2a7r0x0
+
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t leeva:latest .
+        docker tag my-public-repo:latest public.ecr.aws/t2a7r0x0/my-public-repo:latest
+        docker push public.ecr.aws/t2a7r0x0/my-public-repo:latest
