--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
       run: |
         docker build -t leeva:latest .
         docker tag leeva:latest public.ecr.aws/t2a7r0x0/leeva:latest
-        docker push public.ecr.aws/t2a7r0x0/leeva:latest
+        docker push public.ecr.aws/t2a7r0x0/my-public-repo:latest
 
         
