--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push
+name: Docker Build and Terraform Apply
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main 
 
 jobs:
-  build-and-push:
+  build-docker:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -27,4 +27,34 @@ jobs:
         docker tag leeva:latest public.ecr.aws/t2a7r0x0/my-public-repo:latest
         docker push public.ecr.aws/t2a7r0x0/my-public-repo:latest
 
-        
+  deploy-terraform:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    needs: [build-docker]
+    steps:
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 0.14.9
+
+    - name: Initialize Terraform
+      run: terraform init
+
+    - name: Plan Infrastructure Changes
+      run: terraform plan
+
+    - name: "Manual Approval for Terraform"
+      id: terraform-approval
+      run: echo "::set-output name=approved::false"  # Defina como 'true' manualmente após revisar o plano Terraform
+
+    - name: Apply Infrastructure Changes
+      if: steps.terraform-approval.outputs.approved == 'true'
+      run: terraform apply -auto-approve
+
+    - name: Destroy Infrastructure
+      if: steps.terraform-approval.outputs.approved == 'true'  # Execute apenas se a aprovação manual for 'true'
+      run: terraform destroy -auto-approve
+
+
