--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,57 +1,79 @@
-name: Docker Build and Terraform Apply
+---
+name: "workflow"
 
-on:
+'on':
   push:
     branches:
-      - main 
-
+      - main
 jobs:
-  build-docker:
-    runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+  ci:
+    name: "Integration"
+    runs-on: "ubuntu-latest"
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
+      - name: "Checkout Code"
+        uses: "actions/checkout@v2"
 
-    - name: Login to AWS ECR
-      id: login-ecr
-      run: |
-        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/t2a7r0x0
+      - name: "Lint code"
+        run: |
+          echo "Linting repository"
+      - name: "Run unit tests"
+        run: |
+          echo "Running unit tests"
 
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t leeva:latest .
-        docker tag leeva:latest public.ecr.aws/t2a7r0x0/my-public-repo:latest
-        docker push public.ecr.aws/t2a7r0x0/my-public-repo:latest
-
-  deploy-terraform:
-    runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    needs: [build-docker]
+  cd:
+    name: "Deployment"
+    runs-on: "ubuntu-latest"
+    needs:
+      - ci
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 0.14.9
+      - name: "Checkout Code"
+        uses: "actions/checkout@v2"
 
-    - name: Initialize Terraform
-      run: terraform init
+      - name: Set tag
+        id: vars
+        run: echo "::set-output name=tag::${GITHUB_REF#refs/*/}"
 
-    - name: "Manual Approval for Terraform"
-      id: terraform-approval
-      run: echo "::set-output name=approved::true"  # Defina como 'true' manualmente após revisar o plano Terraform
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Apply Infrastructure Changes
-      if: steps.terraform-approval.outputs.approved == 'true'
-      run: terraform apply -auto-approve
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Destroy Infrastructure
-      if: steps.terraform-approval.outputs.approved == 'true'  # Execute apenas se a aprovação manual for 'true'##########
-      run: terraform destroy -auto-approve
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: public.ecr.aws/t2a7r0x0
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          IMAGE_TAG: ${{ steps.vars.outputs.tag }}
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+      - name: Download task definition
+        run: |
+          aws ecs describe-task-definition --task-definition tk-leeva --query taskDefinition > task-definition.json
+
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: leeva-container
+          image: ${{ steps.build-image.outputs.image }}
+
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ secrets.ECS_SERVICE }} lv-cluster
+          cluster: ${{ secrets.ECS_CLUSTER }}
+          wait-for-service-stability: true
 
 
