set manual image tag:02

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,16 +40,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: public.ecr.aws/t2a7r0x0
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-          IMAGE_TAG: latest
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/t2a7r0x0
+          docker build -t my-public-repo .
+          docker tag my-public-repo:latest public.ecr.aws/t2a7r0x0/my-public-repo:latest        
+          docker push public.ecr.aws/t2a7r0x0/my-public-repo:latest
+          
       - name: Download task definition
         run: |
           aws ecs describe-task-definition --task-definition tk-leeva --query taskDefinition > task-definition.json
