--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,20 +46,7 @@ jobs:
           docker tag my-public-repo:latest public.ecr.aws/t2a7r0x0/my-public-repo:latest        
           docker push public.ecr.aws/t2a7r0x0/my-public-repo:latest
 
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: leeva-container
-          image: ${{ steps.build-image.outputs.image }}
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ secrets.ECS_SERVICE }}
-          cluster: ${{ secrets.ECS_CLUSTER }}
-          wait-for-service-stability: true
-
-
+      - name: Update task definition
+        id: update-task-definition
+        run: |
+          - aws ecs update-service --cli-input-json file://task-definition.json
